Fixed the issue where there was an invisible half way marker, need to refix the centered css class

--- a/static/style.css
+++ b/static/style.css
@@ -101,10 +101,9 @@ btn {
   right: 15%;
 }
 .centered {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
 }
 
